--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@ z-index: 1;
   transform: translate(-50%, -50%);
   z-index: 1;
   margin: 0 auto;
-  width: 150px;
-  height: 150px;
+  width: 75px;
+  height: 75px;
   border-radius: 50%;
   box-shadow: inset 0 0 50px #000;
   background-color: #222;
@@ -91,7 +91,7 @@ z-index: 1;
 .card .percent h3 {
   margin-top: 16px;
   color: #fff;
-  font-size: 22px;
+  font-size: 11px;
   transition: 0.5s ease;
 }
 .card .percent .number {
@@ -104,45 +104,48 @@ z-index: 1;
 }
 .card .percent .number h2 {
   color: #fff;
-  font-size: 44px;
-  transition: 0.5s ease;
+  font-size:22px;
+    transition:0.5s ease;
 }
 .card .percent .number h2 span {
-  color: #fff;
-  padding-left: 3px;
-  font-size: 24px;
-  transition: 0.5s ease;
+    color:#fff;
+    padding-left:3px;
+    font-size:12px;
+    transition:0.5s ease;
 }
 .card .percent svg {
-  position: relative;
-  width: 150px;
-  height: 150px;
-  transform: rotate(-85deg);
+    position:relative;
+    width:75px;
+    height:75px;
+    transform:rotate(-85deg);
 }
 .card .percent svg circle {
-  width: 100%;
-  height: 100%;
-  fill: none;
-  stroke: #191919;
-  stroke-width: 10;
-  stroke-linecap: round;
-  transform: translate(5px, 5px);
+    width:100%;
+    height:100%;
+    fill:none;
+    stroke:#191919;
+    stroke-width:10;
+    stroke-linecap:round;
+    transform:translate(5px,5px);
 }
 .card .percent svg circle:nth-child(2) {
-  stroke-dasharray: 440;
-  stroke-dashoffset: 440;
+    stroke-dasharray:440;
+    stroke-dashoffset:440;
 }
 .card .percent svg circle:nth-child(2) {
-  stroke-dashoffset: calc(440px - (440px * 90) / 100);
-  stroke: #63e2ff;
+    stroke-dashoffset:
+        calc(440px - (440px *90)/100);
+        stroke:#63e2ff
 }
 .card .percent svg circle:nth-child(2) {
-  stroke-dashoffset: calc(440px - (440px * 40) / 100);
-  stroke: #d9e021;
+    stroke-dashoffset:
+        calc(440px - (440px *40)/100);
+        stroke:#d9e021
 }
 .card .percent svg circle:nth-child(2) {
-  stroke-dashoffset: calc(440px - (440px * 60) / 100);
-  stroke: #ed1e79;
+    stroke-dashoffset:
+        calc(440px - (440px *60)/100);
+        stroke:#ed1e79
 }
 .card .box {
   position: relative;
